--- a/Documents/Hello world React/index.html
+++ b/Documents/Hello world React/index.html
@@ -13,11 +13,7 @@
     <div id="app"></div>
     <script>
         ReactDOM.render(
-         React.createElement(
-             'h1',
-             null,
-             'Hello World!'
-         ),   
+        <h1> Hello World! </h1>,
            document.getElementById('app') 
         );       
 </script>
